--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100%;
 }
+
+body {
+  background-color: #faf0e6;
+  font-family: Arial, Helvetica, sans-serif, sans-serif
+}
+  
