--- a/src/Components/passwordGen/passwordGen.scss
+++ b/src/Components/passwordGen/passwordGen.scss
@@ -1,24 +1,58 @@
 .intro {
     margin: 20px auto;
-    border: 1px solid black;
+    border: 2px solid black;
     max-width: 70%;
     text-align: center;
     align-content: center;
+    background-color: #a6d0f0;
+    border-radius: 10px;
+    padding-bottom: 20px;
 
     h1{
     }
-    p {}
+    p {
+        max-width: 80%;
+        margin: 10px auto;
+        
+    }
 }
 .instructions {
     margin: auto;
-    border: 1px solid black;
+    border: 2px solid black;
     max-width: 60%;
-    h1{}
-    h3{}
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(244, 196, 129);
+    border-radius: 10px;
+
+    h1{
+        margin-bottom: 10px;
+    }
+
+    h3{
+        font-style: italic;
+    }
+
     .passwordForm{
-        form{}
+        display: flex;
+        flex-direction: column;
+
+
+        form{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            max-width: 300px;
+            margin: 0px auto;
+        }
+
         label{}
-        input{}
-        button{}
+        input{
+        }
+        button{
+            margin: 10px;
+            border-radius: 5px;
+            background-color: lightgrey;
+        }
     }
 }
